# sensors_tools

./: .gitignore  README.md  pyproject.toml  sensor.py  test.py
bridges/: airsim.py  airsim_bridge.py  base_bridge.py  ros.py  ros_bridge.py  scannet.py  scannet_bridge.py  test.py  test_bridge.py
bridges/test_data/: generator.py
inference/: semantic.py  semantic_mcd.py
ros/: CMakeLists.txt  package.xml
ros/cfg/: rviz.rviz  sensor.yaml
ros/launch/: semantic_sensor.launch
ros/scripts/: semantic_node.py  semantic_ros.py
ros/src/: semantic_ros.py
sensors_tools/: sensor.py  test.py  test_open.py  test_open_trident.py
sensors_tools/base/: cameras.py
sensors_tools/bridges/: __init__.py  airsim_bridge.py  base_bridge.py  habitat_bridge.py  ros_bridge.py  scannet_bridge.py  scannet_voc_bridge.py  test.py  test_bridge.py
sensors_tools/bridges/test_data/: generator.py
sensors_tools/inference/: __init__.py  open_clip_semantic.py  open_trident_semantic.py  semantic.py  semantic_mcd.py
sensors_tools/inference/models/: deeplabv3_mcd.py
sensors_tools/inference/models/clip/: README.md  __init__.py  clip.py  clip_extract.py  model.py
sensors_tools/inference/models/trident/: trident.py
sensors_tools/inference/models/trident/open_clip/: __init__.py
sensors_tools/inference/models/trident/seg_utils/: utils.py
sensors_tools/ros/cfg/: sensor.yaml
sensors_tools/ros/scripts/: semantic_ros.py
sensors_tools/utils/: random_utils.py  semantics_utils.py
sensors_tools_ros/: CMakeLists.txt  package.xml
sensors_tools_ros/cfg/: rviz.rviz  sensor.yaml  sensor_airsim.yaml  sensor_airsim_mcd.yaml  sensor_airsim_open_trident.yaml  sensor_habitat.yaml  sensor_rs_open.yaml  sensor_rs_open_trident.yaml  sensor_turtlebot.yaml
sensors_tools_ros/launch/: semantic_sensor.launch  semantic_sensor_realsense.launch
sensors_tools_ros/src/: semantic_node.py  semantic_ros.py
utils/: pcd_utils.py  semantics_utils.py
